modify creds source

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,31 @@
 # ============================================
 # LocalTopSH Configuration
 # ============================================
-# For production: use Docker Secrets (see secrets/ folder)
-# For local dev: use this .env file
+# For Docker Compose: copy to .env (gitignored)
+# Secrets are injected into the `proxy` container only.
 # ============================================
 
-# LLM API (only for local dev - in prod use proxy)
-BASE_URL=http://localhost:8000/v1
-MODEL_NAME=openai/gpt-oss-120b
+# LLM API (example: OpenRouter)
+BASE_URL=https://openrouter.ai/api/v1
+MODEL_NAME=google/gemini-3-flash-preview
 API_KEY=sk-your-api-key
 
-# Telegram Bot (only for local dev - in prod use secret)
+# Telegram Bot
 TELEGRAM_TOKEN=your-telegram-bot-token
 ALLOWED_USERS=123456789
 
-# Search API (only for local dev - in prod use proxy)
+# Web search (set at least one)
+# Tavily (preferred): https://tavily.com/
+TAVILY_API_KEY=tvly-your-tavily-api-key
+# Z.AI (fallback): https://z.ai/
 ZAI_API_KEY=your-zai-api-key
 
 # Gateway settings
 MCP_PORT=3100
 MCP_URL=http://localhost:3100
 WORKSPACE=/workspace
+AGENT_CWD=/workspace
+BOT_PROFILE=october
 
 # Network - port range for user services
 EXPOSED_PORTS=4000-4999
@@ -28,20 +33,5 @@ EXPOSED_PORTS=4000-4999
 # Max concurrent users
 MAX_CONCURRENT_USERS=10
 
-# ============================================
-# PRODUCTION (Docker Compose):
-# Secrets are in ./secrets/ folder:
-#   - telegram_token.txt
-#   - base_url.txt
-#   - api_key.txt
-#   - zai_api_key.txt
-#
-# Gateway container gets:
-#   - PROXY_URL=http://proxy:3200
-#   - TELEGRAM_TOKEN from /run/secrets/
-#
-# Proxy container gets:
-#   - All API keys from /run/secrets/
-#
-# Agent NEVER sees API keys!
-# ============================================
+# Proxy URL inside Docker Compose (usually keep default)
+PROXY_URL=http://proxy:3200
